typescript/checker/tests/conformance/classes/members/constructorFunctionTypes/classWithStaticMembers.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            202,
        ),
        hi: BytePos(
            205,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithStaticMembers.ts:9:10
  |
9 | var r = C.fn();
  |          ^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            219,
        ),
        hi: BytePos(
            220,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithStaticMembers.ts:10:10
   |
10 | var r2 = r.x;
   |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            234,
        ),
        hi: BytePos(
            235,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithStaticMembers.ts:11:10
   |
11 | var r3 = r.foo;
   |          ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            297,
        ),
        hi: BytePos(
            300,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithStaticMembers.ts:17:10
   |
17 | var r = D.fn();
   |          ^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            314,
        ),
        hi: BytePos(
            315,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithStaticMembers.ts:18:10
   |
18 | var r2 = r.x;
   |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            329,
        ),
        hi: BytePos(
            330,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithStaticMembers.ts:19:10
   |
19 | var r3 = r.foo;
   |          ^

